embedding model factory nd service added

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmbeddingModelSettings": {
+    "ProviderName": "openAI",
+    "ModelName": "text-embedding-3-small",
+    "Token":  null
+  }
 }
