Fixes with services

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "EmbeddingModelSettings": {
-    "ProviderName": "openAI",
+    "ProviderName": "OpenAI",
     "ModelName": "text-embedding-3-small",
     "Token":  null
   }
