OpenAI api request completed

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -9,6 +9,7 @@
   "EmbeddingModelSettings": {
     "ProviderName": "OpenAI",
     "ModelName": "text-embedding-3-small",
-    "Token":  null
+    "Token": "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",
+    "Url": "https://api.openai.com/v1/embeddings"
   }
 }
