--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,11 +17,29 @@ services:
       - "8080:8080"
     depends_on:
       - ocr
+      - chroma
     environment:
       - OCR_URL=http://ocr:8081 # Pass ocr URL as an environment variable
+      - CHROMA_API_URL=http://chroma:8000 # Pass ChromaDB URL as an environment variable
+    networks:
+      - app-network
+
+  chroma:
+    image: ghcr.io/chroma-core/chroma:0.4.10
+    container_name: chroma
+    ports:
+      - "8000:8000"
+    volumes:
+      - index_data:/chroma/.chroma/index
     networks:
       - app-network
 
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  index_data:
+    driver: local
+  backups:
+    driver: local
