CRUD for document collections

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -5,7 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
+
+  "ExternalServices": {
+    "ChromaDbUrl": "http://host.docker.internal:8000",
+    "OcrUrl": "http://host.docker.internal:8081"
+  },
+
   "EmbeddingModelSettings": {
     "ProviderName": "OpenAI",
     "ModelName": "text-embedding-3-small",
