Switched to chromadb 0.6.2 and integrated api with the newer version

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ExternalServices": {
-    "ChromaDbUrl": "http://host.docker.internal:8000",
+    "ChromaDbUrl": "http://host.docker.internal:8000/api/v1/",
     "OcrUrl": "http://host.docker.internal:8081"
   },
 
