Now we can configure swagger from appsettings

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -18,5 +18,9 @@
     "ModelName": "mxbai-embed-large",
     "Token": null,
     "Url": "http://host.docker.internal:11434/v1/embeddings"
+  },
+
+  "SwaggerSettings": {
+    "EnableSwagger": true
   }
 }
