--- a/RAG/RAG/RAG.csproj
+++ b/RAG/RAG/RAG.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="ChromaDB.Client" Version="0.9.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
