--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: '3.9'
+
 services:
   ocr:
     build:
@@ -19,8 +20,8 @@ services:
       - ocr
       - chroma
     environment:
-      - OCR_URL=http://ocr:8081 # Pass ocr URL as an environment variable
-      - CHROMA_API_URL=http://chroma:8000 # Pass ChromaDB URL as an environment variable
+      - OCR_URL=http://ocr:8081 # Pass OCR service URL as an environment variable
+      - CHROMA_API_URL=http://chroma:8000 # Pass ChromaDB service URL as an environment variable
     networks:
       - app-network
 
