--- a/RAG/RAG/RagApi.csproj
+++ b/RAG/RAG/RagApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="ChromaDB.Client" Version="0.9.2" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
