Language model handling

--- a/RAG/RAG/appsettings.json
+++ b/RAG/RAG/appsettings.json
@@ -20,6 +20,13 @@
     "Url": "http://host.docker.internal:11434/v1/embeddings"
   },
 
+  "LanguageModelSettings": {
+    "ProviderName": "Ollama",
+    "ModelName": "llama3.2:1b",
+    "Token": null,
+    "Url": "http://host.docker.internal:11434/api/generate"
+  },
+
   "SwaggerSettings": {
     "EnableSwagger": true
   }
